--- a/help/src/hid00019.htm
+++ b/help/src/hid00019.htm
@@ -231,6 +231,10 @@
         カーソル位置が結果リストファイル(一行目が ";[ResultList]")の場合、<a href="hid00005.htm#LoadResultList">LoadResultList</a>
         コマンドで開きます。
       </div>
+      <img src="chkbox.png" alt=""> <b>検索設定</b><br>
+      <div class="indent1">
+        カーソル位置が検索設定ファイル([FindSettings]セクションを持つINIファイル)の場合、<a href="hid00005.htm#LoadFindSet">LoadFindSet</a> コマンドで開きます。
+      </div>
       <br>
 
       <img src="chkbox.png" alt=""> <b>実行後にカーソルを下に移動</b><br>
