--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -256,7 +256,8 @@
 
     <dt class="no_bg_indent1">ファイル情報の書式 <img src="edit.png" alt=""></dt>
     <dd>ファイル名や行番号の書式を指定します。<br>
-      書式には以下の書式文字列を使えます。空欄の場合は "<b>$F $L:</b>" とみなされます。<br>
+      書式には以下の書式文字列を使えます。
+      空欄の場合は "<b>$F $L:</b>" とみなされます。ファイル情報を除きたい場合は <b>\0</b> を指定してください。<br>
       　<b>$F</b> : パス付ファイル名<br>
       　<b>$B</b> : パス無しファイル名<br>
       　<b>$L</b> : 行番号<br>
@@ -264,6 +265,7 @@
       　<b>\n</b> : 改行<br>
       　<b>\s</b> : 空白 (" " でよいのですが、わかりやするために)<br>
       　<b>\\</b> : \ そのもの<br>
+      　<b>\0</b> : ヌル(空文字)<br>
     </dd>
 
     <dt class="no_bg_indent1">マッチ語前後の挿入文字列 <img src="edit.png" alt=""></dt>
