--- a/help/src/hid00071.htm
+++ b/help/src/hid00071.htm
@@ -61,8 +61,10 @@
         　　<b>&lt;</b> :指定日付より古い、　<b>=</b> :指定日付と同じ、　<b>&gt;</b> :指定日付より新しい<br>
         何も指定しないと、ファイルの日付は無視されます。<br>
         <b>例</b>:<br>
-        　<span class="inp_box">&gt;-7D</span>　　　　7日前の日付より新しいファイルのみをコピー<br>
-        　<span class="inp_box">&gt;2016/12/31</span>　2016年12月31日よりも新しいファイルのみをコピー
+        <table>
+          <tr><td>&gt;-7D</td><td>7日前の日付より新しいファイルのみをコピー</td></tr>
+          <tr><td>&gt;2020/12/31</td><td>2020年12月31日よりも新しいファイルのみをコピー</td></tr>
+        </table>
       </div>
     </dd>
 
