--- a/help/src/hid00100.htm
+++ b/help/src/hid00100.htm
@@ -868,6 +868,11 @@
       <td></td>
     </tr>
     <tr>
+      <td><a href="hid00005.htm#LoadFindSet">LoadFindSet</a></td>
+      <td>検索設定をファイルから読み込む</td>
+      <td></td>
+    </tr>
+    <tr>
       <td><a href="hid00005.htm#LoadResultList">LoadResultList</a></td>
       <td>結果リストをファイルから読み込む</td>
       <td></td>
@@ -1249,6 +1254,12 @@
     </tr>
 
     <tr id="f_S">
+      <td><a href="hid00005.htm#SaveAsFindSet">SaveAsFindSet</a></td>
+      <td>検索設定に名前を付けて保存</td>
+      <td></td>
+    </tr>
+
+    <tr>
       <td><a href="hid00005.htm#SaveAsResultList">SaveAsResultList</a></td>
       <td>結果リストに名前を付けて保存</td>
       <td></td>
