--- a/help/src/hid00101.htm
+++ b/help/src/hid00101.htm
@@ -1271,6 +1271,11 @@
       <td></td>
     </tr>
     <tr>
+      <td><a href="hid00005.htm#LoadFindSet">LoadFindSet</a></td>
+      <td>検索設定をファイルから読み込む</td>
+      <td></td>
+    </tr>
+    <tr>
       <td><a href="hid00005.htm#LoadResultList">LoadResultList</a></td>
       <td>結果リストをファイルから読み込む</td>
       <td></td>
@@ -1278,6 +1283,11 @@
     <tr>
       <td><a href="hid00005.htm#MaskFind">MaskFind</a></td>
       <td>指定マスクにマッチするファイル/ディレクトリ名検索</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><a href="hid00005.htm#SaveAsFindSet">SaveAsFindSet</a></td>
+      <td>検索設定に名前を付けて保存</td>
       <td></td>
     </tr>
     <tr>
