--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -37,19 +37,32 @@
   </div>
 
   <dl>
+    <dt>V16.15 <span class="ver_date">(2024-01-08)</span></dt>
+    <dd>
+      ・ファイラーに SaveAsFindSet コマンドを追加。カレントが検索結果リストの場合、その検索設定に名前を付けて保存します。<br>
+      ・ファイラーに LoadFindSet コマンドを追加。SaveAsFindSet コマンドで保存しておいた検索設定ファイルを読み込み、検索を実行します(ダイアログは非表示)。<br>
+      ・オプション設定 - コマンド - OpenStandard に「検索設定」を追加。検索設定ファイルを LoadFindSet コマンドで開いて実行できます。<br>
+      ・「特殊フォルダ一覧」ダイアログ(SpecialDirList)で「PATHのディレクトリを表示」が有効な場合、存在しないパスをエラー色で表示するようにしました。<br>
+      ・文字列検索(GREP)の拡張設定 - 出力形式 - ファイル情報の書式 で使える書式文字列に \0 (ヌル)を追加。ファイル情報を除きたい場合はこれを指定してください。<br>
+      ・ファイル/ディレクトリ名検索で、更新日付欄にワイルドカード(?)が設定された状態で条件を「無視」にしていると、検索を実行できないのを修正。<br>
+    </dd>
+
     <dt>V16.14 <span class="ver_date">(2024-01-03)</span></dt>
     <dd>
       ・文字列検索(GREP)/文字列置換で、誤操作しにくいようにアクティブな「置換」タブを「検索」タブの補色で表示するようにしました。また、[中断]ボタンを[開始]ボタンと兼ねるようにしました。検索中は[開始]が[中断]に変わります。<br>
       ・文字列検索/置換およびGitGREP画面に「単語」オプションを追加。検索文字列は英単語境界でのみ一致します。<br>
       ・文字列検索/置換でカレントのファイルのみが選択中の場合、マスクやサブディレクトリの設定を隠し、代わりに選択ファイル数を強調表示するようにしました。<br>
-      ・文字列検索/置換で、「ヒットしたカレントのファイルを選択」を、ファイラーで SelAllFile コマンドが割り当てられているキーでも行えるようにしました。また選択後の確認メッセージは出さないようにしました。なお、ファイル選択後、それらに対してさらに検索を行えなくなっていたのを修正。<br>
+      ・文字列検索/置換で、「ヒットしたカレントのファイルを選択」を、ファイラーで SelAllFile
+      コマンドが割り当てられているキーでも行えるようにしました。また選択後の確認メッセージは出さないようにしました。なお、ファイル選択後、それらに対してさらに検索を行えなくなっていたのを修正。<br>
       ・文字列検索で、結果リスト項目の一時的な削除ができなくなっていたのを修正。<br>
     </dd>
 
     <dt>V16.13 <span class="ver_date">(2024-01-01)</span></dt>
     <dd>
-      ・ファイラー/テキストビューアに Grep2 コマンドを追加。Grep コマンドと同じ文字列検索(GREP)画面が開きますが、検索処理に外部の grep.exe (Git for Windows)を利用します。いくつかの制約がありますが、正規表現検索などは従来の Grep コマンドに比べてかなり高速です。<br>
-      ・文字列検索(GREP)で、フィルタによる結果の絞り込みは、ファイル名や行番号を除いた行内容部分のみを対象とするようにしました。ただし、Grep2 で「1マッチ」が有効な場合はファイル名しか取得されないため、ファイル名が対象となります。<br>
+      ・ファイラー/テキストビューアに Grep2 コマンドを追加。Grep コマンドと同じ文字列検索(GREP)画面が開きますが、検索処理に外部の grep.exe (Git for
+      Windows)を利用します。いくつかの制約がありますが、正規表現検索などは従来の Grep コマンドに比べてかなり高速です。<br>
+      ・文字列検索(GREP)で、フィルタによる結果の絞り込みは、ファイル名や行番号を除いた行内容部分のみを対象とするようにしました。ただし、Grep2
+      で「1マッチ」が有効な場合はファイル名しか取得されないため、ファイル名が対象となります。<br>
       ・文字列検索(GREP)で「行頭のタブや空白を非表示」が有効な場合、「行内容でソート」でも行頭のタブや空白を除いてソートするようにしました。<br>
       ・文字列検索(GREP)の結果リストで、省略されているファイル名をスティッキー表示するようにしました。<br>
       ・Git GREP で、検索文字列欄に空白で区切った単語を入力した場合、OR検索と見なすようにしました。また、正規表現で \d を入力した場合、[0-9] に変換して渡すようにしました。<br>
@@ -63,8 +76,10 @@
       ・文字列検索(GREP)/文字列置換の表示メニュー/結果リストの右クリックメニューに「検索中に結果リストを更新しない」/「一括置換中に結果リストを更新しない」を追加。<br>
       ・Gitビューアの検索バーに[GREP]ボタンを追加。Git GREP ウィンドウを開き、選択中のリビジョンに対して git grep を実行できます。<br>
       ・ファイラーに GitGrep コマンドを追加。Gitの作業ディレクトリにいる場合、Git GREP ウィンドウを開きます。ファイラーのカレントがそのまま作業ディレクトリとなります。<br>
-      ・オプション設定 - フォント・配色 に「ディレクトリ情報の下境界線」および「ドライブ情報の上境界線」を追加(無効化可能)。今まではドライブ情報の上境界線を特定の状態のときに「分割境界線」色で表示していましたが、これを指定色で常に表示するようにしました。<br>
-      ・無効なUNCパスのディレクトリが含まれてるワークリストを開くと、desktop.ini の存在チェックのため表示に時間がかかってしまうのを修正(V16.09)。UNCパスのディレクトリについては、フォルダアイコンのチェック/取得を行わないようにしました。<br>
+      ・オプション設定 - フォント・配色
+      に「ディレクトリ情報の下境界線」および「ドライブ情報の上境界線」を追加(無効化可能)。今まではドライブ情報の上境界線を特定の状態のときに「分割境界線」色で表示していましたが、これを指定色で常に表示するようにしました。<br>
+      ・無効なUNCパスのディレクトリが含まれてるワークリストを開くと、desktop.ini
+      の存在チェックのため表示に時間がかかってしまうのを修正(V16.09)。UNCパスのディレクトリについては、フォルダアイコンのチェック/取得を行わないようにしました。<br>
     </dd>
 
     <dt>V16.11 <span class="ver_date">(2023-12-26)</span></dt>
@@ -77,7 +92,8 @@
 
     <dt>V16.10 <span class="ver_date">(2023-12-24)</span></dt>
     <dd>
-      ・オプション設定 - テキストビューア に「インデントガイドを表示」を追加。これに対応するコマンドとして ShowIndent を追加。また、オプション設定 - フォント・配色 に「インデントガイド」、「インデントガイド(交互)」を追加。<br>
+      ・オプション設定 - テキストビューア に「インデントガイドを表示」を追加。これに対応するコマンドとして ShowIndent を追加。また、オプション設定 - フォント・配色
+      に「インデントガイド」、「インデントガイド(交互)」を追加。<br>
       ・テキストビューアの SelCurWord コマンドのパラメータに EX を追加。カーソルが既存の選択範囲の末尾にある場合、単語を追加選択できます。空白や記号なども順次選択されます。<br>
       ・オプション設定 - テキストビューア の「外部ビューア」を廃止。必要な場合は「外部ツール」を利用してください。<br>
       ・オプション設定で検索欄の内容が変化したとき、50m秒待機してから検索を行うようにしました(IME確定時の対策)。<br>
@@ -87,10 +103,13 @@
     <dt>V16.09 <span class="ver_date">(2023-12-22)</span></dt>
     <dd>
       ・ファイラーの DateSelect コマンドのパラメータに TD (今日付のファイルを選択)、CP (カーソル位置と同じ日付のファイルを選択)を追加。<br>
-      ・オプション設定 - 一般 - 監視/更新 の「アクティブ時に最新の情報に」が有効で、非アクティブな NyanFi のツールボタンやファンクションキーバーのボタンを押したとき、ファイルリストの更新処理中でボタンのコマンドが実行できなかった場合、更新後にそれを実行するようにしました。<br>
-      ・コマンドの入力欄(InputCommands コマンド、ツールバーの設定、オプション設定 - イベント)で[F2]キーを押すと、全体を選択/パラメータ(引用符があればその内部)を選択/末尾に移動 の順番に状態が切り替わるようにしました。<br>
+      ・オプション設定 - 一般 - 監視/更新 の「アクティブ時に最新の情報に」が有効で、非アクティブな NyanFi
+      のツールボタンやファンクションキーバーのボタンを押したとき、ファイルリストの更新処理中でボタンのコマンドが実行できなかった場合、更新後にそれを実行するようにしました。<br>
+      ・コマンドの入力欄(InputCommands コマンド、ツールバーの設定、オプション設定 - イベント)で[F2]キーを押すと、全体を選択/パラメータ(引用符があればその内部)を選択/末尾に移動
+      の順番に状態が切り替わるようにしました。<br>
       ・desktop.ini でフォルダアイコンが設定されている場合、それを表示するようにしました。SetFolderIcon コマンドで独自設定されている場合は、そちらが優先されます。<br>
-      ・正規表現チェッカーで「詳細」が有効な場合、マッチ/グループ/置換文字列にタブ文字が含まれていると結果が適切に表示されなかったのを修正。結果の引用符内にあるタブ文字は、ビューアの「タブ表示色」で "\t" と表示するようにしました。<br>
+      ・正規表現チェッカーで「詳細」が有効な場合、マッチ/グループ/置換文字列にタブ文字が含まれていると結果が適切に表示されなかったのを修正。結果の引用符内にあるタブ文字は、ビューアの「タブ表示色」で "\t"
+      と表示するようにしました。<br>
       ・VSLスタイル(Windows 以外)を適用している場合、サブビューアをロックしたときの赤枠が表示されないのを修正。ツールウインドウの境界線を赤で表示するようにしました。<br>
       ・メタファイル(.wmf、.emf)のサムネイルを作成できなくなっていたのを修正。また、画像ファイルの変換(ConvertImage)で、「縮小・拡大を行わない」に設定すると、メタファイルの変換に失敗するのを修正。<br>
       ・特殊フォルダ一覧で TEMP と TMP が同じ表示になっていたのを修正。<br>
